1st responsive wensite in the web development project series

--- a/project1/index.html
+++ b/project1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Travelly is a travel agency website that helps you to pick cool destinations"
+      content="Travelgram is a travel agency website that helps you to pick cool destinations"
     />
     <meta name="robots" content="index,follow" />
     <link
@@ -14,12 +14,12 @@
     />
     <link rel="icon" href="/icons/aircraft.svg" />
     <link rel="stylesheet" href="/style.css" />
-    <title>Travelly | Travelling Agency</title>
+    <title>Travelgram | Travelling Agency</title>
   </head>
   <body>
     <header class="main-head">
       <nav>
-        <hi id="logo">Travelly</hi>
+        <hi id="logo">Travelgram</hi>
         <ul>
           <li><a href="#locations">Locations</a></li>
           <li><a href="#benefits">Benefits</a></li>
@@ -110,7 +110,7 @@
     </section>
     <footer>
       <div class="footer-wrapper">
-        <h5>Travelly &copy;</h5>
+        <h5>Travelgram &copy;</h5>
         <ul>
           <li>
             <a href="#"
