1st responsive wensite in the web development project series

--- a/project1/index.html
+++ b/project1/index.html
@@ -27,87 +27,89 @@
         </ul>
       </nav>
     </header>
-    <section class="hero">
-      <h2>Travel Beyond Limits.</h2>
-      <h3>
-        Start you travel at an affordable price with trevelly <br />
-        Contact us now. link below.
-      </h3>
-      <button>Book Now</button>
-    </section>
-    <section id="locations">
-      <header class="locations-head">
-        <h2>The prefect Travelling Experience.</h2>
+    <main>
+      <section class="hero">
+        <h2>Travel Beyond Limits.</h2>
         <h3>
-          We manage everything during journey, we will help you<br />
-          to remember wonderful memories.wtf
+          Start you travel at an affordable price with trevelly <br />
+          Contact us now. link below.
         </h3>
-        <img
-          src="/images/18-cloud-png-image.png"
-          class="moving-cloud-1 cloud"
-          width="500"
-          height="250"
-        />
-        <img
-          src="/images/18-cloud-png-image.png"
-          class="moving-cloud-2 cloud"
-          width="500"
-          height="250"
-        />
-      </header>
-    </section>
-    <section id="benefits">
-      <header class="benefits-head">
-        <h2>The Perfect Travel Partner</h2>
-        <h3>
-          We cover everything from picking the perfect hotel<br />to flight and
-          destination.
-        </h3>
-      </header>
-      <div class="cards">
-        <div class="card">
-          <div class="card-icon">
-            <img src="/icons/6624468.png" />
-          </div>
-          <h4>Travel</h4>
-          <p>Travel over 150 countries with no effort</p>
-        </div>
-        <div class="card">
-          <div class="card-icon">
-            <img src="/icons/icon-bed-8.jpg" />
-          </div>
-          <h4>Hotel</h4>
-          <p>Hotels located near popular areas</p>
-        </div>
-        <div class="card">
-          <div class="card-icon">
-            <img src="/icons/7384364.png" />
-          </div>
-          <h4>Flight</h4>
-          <p>Flight included in every purchased trip.</p>
-        </div>
-      </div>
-    </section>
-    <section id="contact">
-      <div class="form-wrapper">
-        <header class="form-head">
-          <h2>Contact Us</h2>
+        <button>Book Now</button>
+      </section>
+      <section id="locations">
+        <header class="locations-head">
+          <h2>The prefect Travelling Experience.</h2>
+          <h3>
+            We manage everything during journey, we will help you<br />
+            to remember wonderful memories.wtf
+          </h3>
+          <img
+            src="/images/18-cloud-png-image.png"
+            class="moving-cloud-1 cloud"
+            width="500"
+            height="250"
+          />
+          <img
+            src="/images/18-cloud-png-image.png"
+            class="moving-cloud-2 cloud"
+            width="500"
+            height="250"
+          />
         </header>
-        <form action="#">
-          <div class="name-form">
-            <label for="name">Name</label>
-            <input type="text" name="name" required />
+      </section>
+      <section id="benefits">
+        <header class="benefits-head">
+          <h2>The Perfect Travel Partner</h2>
+          <h3>
+            We cover everything from picking the perfect hotel<br />to flight
+            and destination.
+          </h3>
+        </header>
+        <div class="cards">
+          <div class="card">
+            <div class="card-icon">
+              <img src="/icons/6624468.png" />
+            </div>
+            <h4>Travel</h4>
+            <p>Travel over 150 countries with no effort</p>
           </div>
-          <div class="email-form">
-            <label for="email">Email</label>
-            <input type="email" name="email" required />
+          <div class="card">
+            <div class="card-icon">
+              <img src="/icons/icon-bed-8.jpg" />
+            </div>
+            <h4>Hotel</h4>
+            <p>Hotels located near popular areas</p>
           </div>
-          <div>
-            <button type="submit">Submit</button>
+          <div class="card">
+            <div class="card-icon">
+              <img src="/icons/7384364.png" />
+            </div>
+            <h4>Flight</h4>
+            <p>Flight included in every purchased trip.</p>
           </div>
-        </form>
-      </div>
-    </section>
+        </div>
+      </section>
+      <section id="contact">
+        <div class="form-wrapper">
+          <header class="form-head">
+            <h2>Contact Us</h2>
+          </header>
+          <form action="#">
+            <div class="name-form">
+              <label for="name">Name</label>
+              <input type="text" name="name" required />
+            </div>
+            <div class="email-form">
+              <label for="email">Email</label>
+              <input type="email" name="email" required />
+            </div>
+            <div>
+              <button type="submit">Submit</button>
+            </div>
+          </form>
+        </div>
+      </section>
+    </main>
     <footer>
       <div class="footer-wrapper">
         <h5>Travelgram &copy;</h5>
